--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,10 @@
 AC_INIT(mnhtools, 0.1, markiyan.kushnir@gmail.com, mnhtools, https://github.com/mkushnir)
+
+AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([.ac-aux])
+AC_CONFIG_FILES([Makefile src/Makefile test/Makefile man/Makefile])
+AC_CONFIG_HEADERS(config.h)
+
 if test -n "$USE_GCC"
 then
     probe="gcc${USE_GCC}"
@@ -56,14 +62,11 @@ case "$target_os" in
     ;;
 esac
 
-AC_CONFIG_MACRO_DIR([m4])
-
 AC_LANG(C)
 
 AC_PROG_CC
 AC_PROG_CXX
 AM_PROG_AR
-AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 LT_INIT
@@ -72,9 +75,6 @@ AM_SILENT_RULES([yes])
 
 dnl AM_MAINTAINER_MODE
 
-AC_CONFIG_FILES([Makefile src/Makefile test/Makefile man/Makefile])
-
-AC_CONFIG_HEADERS(config.h)
 
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
